--- a/Index.html
+++ b/Index.html
@@ -1,154 +1,82 @@
-<!DOCTYPE html><html lang="bn">
+<!DOCTYPE html>
+<html lang="bn">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Crunchyroll Premium BD Shop</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
   <style>
     body {
+      margin: 0;
+      padding: 0;
       font-family: 'Inter', sans-serif;
       background: linear-gradient(to bottom, #131c2b, #202f45);
       color: white;
-      margin: 0;
-      padding: 0;
     }
+
     header {
       background-color: #0a0f1c;
       padding: 20px;
       text-align: center;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.5);
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
     }
+
     header h1 {
-      margin: 0;
       color: #ff9f1c;
+      margin: 0;
     }
-    .container {
+
+    .image-section {
+      text-align: center;
+      margin-top: 20px;
+    }
+
+    .image-section img {
+      width: 95%;
       max-width: 700px;
-      margin: 30px auto;
-      background: #1c2a3a;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+      height: auto;
+      border-radius: 15px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.5);
     }
-    input, select, button {
-      width: 100%;
-      padding: 10px;
-      margin: 10px 0;
-      border-radius: 8px;
-      border: none;
-      font-size: 16px;
-    }
-    button {
-      background-color: #ff4081;
-      color: white;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #e23370;
-    }
-    .image-banner {
-      width: 100%;
-      max-height: 500px;
-      object-fit: cover;
-      margin-bottom: 20px;
-    }
-    .round-image {
-      width: 140px;
-      height: 140px;
-      border-radius: 50%;
-      overflow: hidden;
-      border: 3px solid #ff9f1c;
-      margin: 20px auto;
-    }
-    .round-image img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
+
     .section-title {
       text-align: center;
-      font-size: 22px;
+      margin-top: 20px;
+      font-size: 24px;
+      font-weight: bold;
       color: #ffcc00;
-      margin: 20px 0 10px;
     }
+
     .stars {
       text-align: center;
-      font-size: 24px;
-      color: gold;
+      font-size: 26px;
+      margin-top: 10px;
+      color: #ffd700;
+    }
+
+    @media screen and (max-width: 600px) {
+      .section-title {
+        font-size: 20px;
+      }
+      .stars {
+        font-size: 22px;
+      }
     }
   </style>
 </head>
 <body>
-  <header><h1>Crunchyroll Premium BD Shop</h1></header>  <div class="container">
-    <img src="https://i.ibb.co/HYJvSvK/mega-banner.jpg" class="image-banner" alt="Main Banner"><div class="round-image">
-  <img src="https://i.ibb.co/Xybd6b5/small-round.jpg" alt="Round">
-</div>
 
-<div class="section-title">📦 MEGA PACKAGES</div>
-<div class="stars">⭐️⭐️⭐️⭐️⭐️</div>
+  <header>
+    <h1>Crunchyroll Premium BD Shop</h1>
+  </header>
 
-<input type="number" id="amount" placeholder="যে এমাউন্ট দিতে চান লিখুন (যেমনঃ 100)">
-<button onclick="startOrder()">🛒 Add to Cart</button>
+  <div class="image-section">
+    <img src="https://i.postimg.cc/KvBrVgmR/20250625-061716.jpg" alt="Mega Package Image" />
+  </div>
 
-<form id="orderForm" style="display:none;">
-  <input type="text" name="name" placeholder="Full Name" required>
-  <input type="email" name="email" placeholder="Email" required>
-  <input type="text" name="address" placeholder="Address" required>
-  <input type="text" name="mobile" placeholder="Mobile" required>
-  <select name="package">
-    <option value="1 Month">1 Month</option>
-    <option value="3 Months">3 Months</option>
-  </select>
-  <input type="text" name="payment_number" placeholder="Payment Number" required>
-  <input type="text" name="trans_id" placeholder="Transaction ID" required>
-  <select name="payment_method">
-    <option value="Bkash">Bkash</option>
-    <option value="Nagad">Nagad</option>
-  </select>
-  <button type="submit">✅ অর্ডার কনফার্ম করুন</button>
-</form>
+  <div class="section-title">🌟 MEGA PACKAGES 🌟</div>
 
-  </div>  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyDDvKtm-Mu_12pDLo_9bPvLOusx6YyoYI4",
-      authDomain: "crunchyrollpremiumbd-shop.firebaseapp.com",
-      projectId: "crunchyrollpremiumbd-shop"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
+  <div class="stars">★ ★ ★ ★ ★</div>
 
-    emailjs.init("SsUmUorUm-BZG8LBY");
-
-    function startOrder(){
-      const amt = Number(document.getElementById("amount").value);
-      if(!amt || amt < 1){
-        alert("⚠️ সঠিক এমাউন্ট লিখুন");
-        return;
-      }
-      alert(`✅ ৳${amt} প্যাকেজ সিলেক্ট হয়েছে। নিচের ফর্ম পূরণ করুন।`);
-      document.getElementById("orderForm").style.display = "block";
-    }
-
-    document.getElementById("orderForm").addEventListener("submit", function(e){
-      e.preventDefault();
-      const formData = new FormData(this);
-      const data = Object.fromEntries(formData.entries());
-      data.amount = document.getElementById("amount").value;
-      data.timestamp = firebase.firestore.FieldValue.serverTimestamp();
-
-      db.collection("orders").add(data).then(()=>{
-        alert("✅ অর্ডার কনফার্ম হয়েছে!");
-        emailjs.send("service_z1714kq", "template_hp66tqp", data);
-        emailjs.send("service_z1714kq", "template_1z1lhlf", data);
-        this.reset();
-        document.getElementById("amount").value = "";
-        document.getElementById("orderForm").style.display = "none";
-      }).catch(err=>{
-        alert("❌ অর্ডার ব্যর্থ হয়েছে: "+err);
-      });
-    });
-  </script></body>
+</body>
 </html>
