--- a/Index.html
+++ b/Index.html
@@ -1,111 +1,116 @@
-<!DOCTYPE html><html lang="bn">
+<!DOCTYPE html>
+<html lang="bn">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Crunchyroll Premium BD Shop</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
   <style>
     body {
       font-family: 'Inter', sans-serif;
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(to bottom, #131c2b, #202f45);
-      color: white;
+      margin: 0; padding: 0;
+      background: #131c2b; color: white;
     }
     header {
-      background-color: #0a0f1c;
-      padding: 20px;
-      text-align: center;
+      background: #0a0f1c; padding: 20px; text-align: center;
     }
-    header h1 {
-      color: #ff9f1c;
-      margin: 0;
-    }
+    header h1 { margin: 0; color: #ff9f1c; }
+
     .container {
-      max-width: 600px;
-      margin: 30px auto;
-      background: #1c2a3a;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+      max-width: 600px; margin: 30px auto; padding: 20px;
+      background: #1c2a3a; border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
     }
-    h2 {
-      text-align: center;
-      color: #ffcc00;
+
+    img.banner {
+      width: 100%; border-radius: 10px;
     }
-    button, input, select {
-      width: 100%;
-      padding: 10px;
-      margin: 10px 0;
-      border-radius: 6px;
-      border: none;
-      font-size: 16px;
+    img.small-pic {
+      width: 150px; height: 150px;
+      border-radius: 50%; margin: 20px auto; display: block;
     }
-    button {
-      background-color: #28a745;
+
+    .green-btn {
+      background: green; color: white;
+      padding: 10px 20px; border: none;
+      border-radius: 8px; font-size: 18px;
+      cursor: pointer; display: block;
+      margin: 10px auto;
+    }
+    .green-btn:hover {
+      background: #0f9d58;
+    }
+
+    .stars {
+      text-align: center; margin-top: 5px;
+      color: gold; font-size: 20px;
+    }
+
+    .package-page, #packageSelect {
+      display: none;
+    }
+
+    .package-btn {
+      background-color: #333;
       color: white;
+      padding: 12px;
+      border: 1px solid #555;
+      border-radius: 8px;
+      margin: 10px 0;
       cursor: pointer;
+      width: 100%;
     }
-    button:hover {
-      background-color: #218838;
+
+    .package-btn:hover {
+      background-color: #444;
     }
-    .section { display: none; }
-    .visible { display: block; }
   </style>
 </head>
-<body><header>
-  <h1>Crunchyroll Premium BD Shop</h1>
-</header><!-- Home Section --><div id="home" class="container section visible">
-  <img src="https://i.postimg.cc/KvBrVgmR/20250625-061716.jpg" alt="Banner" style="width:100%; border-radius:10px;">
-  <br><br>
-  <img src="https://i.postimg.cc/PxJQF3qj/89fcdebedfdcf2bf3a00a49d75833c3a-1.jpg" alt="Small Pic" style="width:120px; border-radius:50%; display:block; margin: 0 auto;">
-  <br>
-  <button onclick="showPackages()">🌟 MEGA PACKAGES</button>
-  <div style="text-align:center; font-size:20px; color:gold;">
-    ★★★★★
+<body>
+  <header>
+    <h1>Crunchyroll Premium BD Shop</h1>
+  </header>
+
+  <div class="container">
+    <img src="https://i.postimg.cc/KvBrVgmR/20250625-061716.jpg" class="banner" alt="Main Banner" />
+    <img src="https://i.postimg.cc/PxJQF3qj/89fcdebedfdcf2bf3a00a49d75833c3a-1.jpg" class="small-pic" alt="Small Profile" />
+    <button class="green-btn" onclick="showPackagePage()">MEGA PACKAGES</button>
+    <div class="stars">★ ★ ★</div>
   </div>
-</div><!-- Package Section --><div id="packages" class="container section">
-  <h2>📦 Crunchyroll Subscription Packages</h2>  <h3>Crunchyroll Share Account ⚡</h3>
-  <p>📅 1 Month – Only 100 TK</p>
-  <p>📅 2 Months – Only 200 TK</p>
-  <p>📅 3 Months – Only 300 TK</p>
-  <p>📅 6 Months – Only 600 TK</p>
-  <p>📅 8 Months – Only 840 TK</p>
-  <button onclick="selectPackage('Crunchyroll Share Account')">Add to Cart</button>  <h3>Crunchyroll Personal Profile ⚡</h3>
-  <p>📅 1 Month – Only 240 TK</p>
-  <p>📅 2 Months – Only 480 TK</p>
-  <p>📅 3 Months – Only 720 TK</p>
-  <p>📅 6 Months – Only 1440 TK</p>
-  <p>📅 8 Months – Only 1800 TK</p>
-  <p>📅 12 Months – Only 2760 TK</p>
-  <button onclick="selectPackage('Crunchyroll Personal Profile')">Add to Cart</button>  <h3>Crunchyroll Primary Account ⚡</h3>
-  <p>📅 1 Month – Only 650 TK</p>
-  <p>📅 2 Months – Only 1300 TK</p>
-  <p>📅 3 Months – Only 1950 TK</p>
-  <p>📅 6 Months – Only 3600 TK</p>
-  <button onclick="selectPackage('Crunchyroll Primary Account')">Add to Cart</button>  <br>
-  <button onclick="goHome()">⬅️ Back to Home</button>
-</div><script>
-  function showPackages() {
-    document.getElementById("home").classList.remove("visible");
-    document.getElementById("home").classList.add("section");
-    document.getElementById("packages").classList.add("visible");
-    document.getElementById("packages").classList.remove("section");
-  }
 
-  function goHome() {
-    document.getElementById("packages").classList.remove("visible");
-    document.getElementById("packages").classList.add("section");
-    document.getElementById("home").classList.add("visible");
-    document.getElementById("home").classList.remove("section");
-  }
+  <!-- 👉 MEGA PACKAGES PAGE -->
+  <div class="container package-page" id="packagePage">
+    <h2>📦 প্যাকেজ সিলেক্ট করুন</h2>
 
-  function selectPackage(pkg) {
-    alert(`✅ ${pkg} প্যাকেজটি কার্টে যোগ হয়েছে!`);
-    // You can add Firebase or EmailJS logic here to process the selection
-  }
-</script></body>
+    <button class="package-btn">Share ⚡ - 1 Month – 100 TK</button>
+    <button class="package-btn">Share ⚡ - 2 Months – 200 TK</button>
+    <button class="package-btn">Share ⚡ - 3 Months – 300 TK</button>
+    <button class="package-btn">Share ⚡ - 6 Months – 600 TK</button>
+    <button class="package-btn">Share ⚡ - 8 Months – 840 TK</button>
+
+    <button class="package-btn">Personal ⚡ - 1 Month – 240 TK</button>
+    <button class="package-btn">Personal ⚡ - 2 Months – 480 TK</button>
+    <button class="package-btn">Personal ⚡ - 3 Months – 720 TK</button>
+    <button class="package-btn">Personal ⚡ - 6 Months – 1440 TK</button>
+    <button class="package-btn">Personal ⚡ - 8 Months – 1800 TK</button>
+    <button class="package-btn">Personal ⚡ - 12 Months – 2760 TK</button>
+
+    <button class="package-btn">Primary ⚡ - 1 Month – 650 TK</button>
+    <button class="package-btn">Primary ⚡ - 2 Months – 1300 TK</button>
+    <button class="package-btn">Primary ⚡ - 3 Months – 1950 TK</button>
+    <button class="package-btn">Primary ⚡ - 6 Months – 3600 TK</button>
+
+    <button class="green-btn">🛒 Add to Cart</button>
+  </div>
+
+  <script>
+    function showPackagePage() {
+      document.querySelector(".package-page").style.display = "block";
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    }
+  </script>
+</body>
 </html>
