--- a/Index.html
+++ b/Index.html
@@ -1,91 +1,95 @@
-<!DOCTYPE html>
-<html lang="bn">
+<!DOCTYPE html><html lang="bn">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Crunchyroll Premium BD Shop</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Inter', sans-serif;
-      margin: 0; padding: 0;
-      background: #131c2b; color: white;
+      margin: 0;
+      padding: 0;
+      background-color: #131c2b;
+      color: white;
     }
     header {
-      background: #0a0f1c; padding: 20px; text-align: center;
+      background-color: #0a0f1c;
+      text-align: center;
+      padding: 20px;
     }
-    header h1 { margin: 0; color: #ff9f1c; }
-
+    header h1 {
+      color: #ff9f1c;
+    }
     .container {
-      max-width: 600px; margin: 30px auto; padding: 20px;
-      background: #1c2a3a; border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+      max-width: 800px;
+      margin: 20px auto;
+      padding: 20px;
+      background-color: #1c2a3a;
+      border-radius: 10px;
     }
-
-    img.banner {
-      width: 100%; border-radius: 10px;
-    }
-    img.small-pic {
-      width: 150px; height: 150px;
-      border-radius: 50%; margin: 20px auto; display: block;
-    }
-
-    .green-btn {
-      background: green; color: white;
-      padding: 12px 20px; border: none;
-      border-radius: 8px; font-size: 18px;
-      cursor: pointer; display: block;
-      margin: 10px auto;
-      transition: 0.3s ease;
-    }
-    .green-btn:hover {
-      background: #0f9d58;
-      transform: scale(1.05);
-    }
-
-    .stars {
-      text-align: center; margin-top: 5px;
-      color: gold; font-size: 20px;
-    }
-
-    .package-page { display: none; }
-
-    .section-title {
-      font-size: 20px;
-      font-weight: 600;
-      margin-top: 30px;
-      border-bottom: 1px solid #ff9f1c;
+    h2 {
+      color: #ffcc00;
+      border-bottom: 1px solid #444;
       padding-bottom: 5px;
     }
-
-    .package-grid {
-      display: grid;
-      grid-template-columns: 1fr;
-      gap: 12px;
-      margin: 15px 0;
-    }
-
-    .package-btn {
-      background: #222e44;
-      color: white;
-      border: 1px solid #ff9f1c;
-      border-left: 5px solid #ff9f1c;
-      padding: 14px;
-      border-radius: 8px;
+    .package-buttons button {
+      width: 100%;
+      background-color: #222f3e;
+      color: #00ff99;
+      border: 1px solid #00ff99;
+      margin: 8px 0;
+      padding: 12px;
       font-size: 16px;
+      border-radius: 8px;
       cursor: pointer;
-      transition: all 0.3s ease;
-      text-align: left;
     }
-
-    .package-btn:hover {
-      background-color: #2d3e59;
-      transform: scale(1.02);
+    .package-buttons button:hover {
+      background-color: #00ff99;
+      color: #1c2a3a;
     }
-
-    .back-btn {
-      margin-top: 10px;
-      background-color: #444;
+    .actions {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 20px;
+    }
+    .actions button {
+      width: 48%;
+      background-color: #28a745;
+      color: white;
+      border: none;
+      padding: 12px;
+      font-size: 16px;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+    .actions button.back {
+      background-color: #007bff;
+    }
+    .image-section {
+      text-align: center;
+      margin: 20px 0;
+    }
+    .image-section img.main-img {
+      width: 100%;
+      max-width: 100%;
+      height: auto;
+      border-radius: 10px;
+    }
+    .image-section img.small-img {
+      width: 100px;
+      height: 100px;
+      object-fit: cover;
+      border-radius: 50%;
+      margin-top: 15px;
+    }
+    .text-note {
+      margin-top: 30px;
+      font-size: 15px;
+      color: white;
+      line-height: 1.6;
+      background: rgba(255,255,255,0.05);
+      padding: 15px;
+      border-radius: 10px;
     }
   </style>
 </head>
@@ -93,65 +97,54 @@
   <header>
     <h1>Crunchyroll Premium BD Shop</h1>
   </header>
+  <div class="container"><div class="image-section">
+  <img class="main-img" src="https://i.postimg.cc/KvBrVgmR/20250625-061716.jpg" alt="Main Package Image">
+  <img class="small-img" src="https://i.postimg.cc/PxJQF3qj/89fcdebedfdcf2bf3a00a49d75833c3a-1.jpg" alt="Round Icon">
+</div>
 
-  <!-- 🖼️ Home Section -->
-  <div class="container" id="homePage">
-    <img src="https://i.postimg.cc/KvBrVgmR/20250625-061716.jpg" class="banner" alt="Main Banner" />
-    <img src="https://i.postimg.cc/PxJQF3qj/89fcdebedfdcf2bf3a00a49d75833c3a-1.jpg" class="small-pic" alt="Small Profile" />
-    <button class="green-btn" onclick="showPackagePage()">MEGA PACKAGES</button>
-    <div class="stars">★ ★ ★</div>
+<button onclick="scrollToPackages()" style="width:100%;background:#28a745;color:#fff;font-size:18px;padding:12px;border:none;border-radius:8px;cursor:pointer;margin-bottom:20px;">MEGA PACKAGES</button>
+
+<div id="packages">
+  <h2>📺 Shared Profile</h2>
+  <div class="package-buttons">
+    <button>📅 1 Month – Only 100 TK</button>
+    <button>📅 2 Months – Only 200 TK</button>
+    <button>📅 3 Months – Only 300 TK</button>
+    <button>📅 6 Months – Only 600 TK</button>
+    <button>📅 8 Months – Only 840 TK</button>
   </div>
 
-  <!-- 📦 Package Selection Page -->
-  <div class="container package-page" id="packagePage">
-    <h2 style="text-align:center;">📦 প্যাকেজ সিলেক্ট করুন</h2>
-
-    <!-- Shared Profile -->
-    <div class="section-title">🔹 Shared Profile</div>
-    <div class="package-grid">
-      <button class="package-btn">📅 1 Month – 100 TK</button>
-      <button class="package-btn">📅 2 Months – 200 TK</button>
-      <button class="package-btn">📅 3 Months – 300 TK</button>
-      <button class="package-btn">📅 6 Months – 600 TK</button>
-      <button class="package-btn">📅 8 Months – 840 TK</button>
-    </div>
-
-    <!-- Personal Profile -->
-    <div class="section-title">🔹 Personal Profile</div>
-    <div class="package-grid">
-      <button class="package-btn">📅 1 Month – 240 TK</button>
-      <button class="package-btn">📅 2 Months – 480 TK</button>
-      <button class="package-btn">📅 3 Months – 720 TK</button>
-      <button class="package-btn">📅 6 Months – 1440 TK</button>
-      <button class="package-btn">📅 8 Months – 1800 TK</button>
-      <button class="package-btn">📅 12 Months – 2760 TK</button>
-    </div>
-
-    <!-- Primary Account -->
-    <div class="section-title">🔹 Primary Account</div>
-    <div class="package-grid">
-      <button class="package-btn">📅 1 Month – 650 TK</button>
-      <button class="package-btn">📅 2 Months – 1300 TK</button>
-      <button class="package-btn">📅 3 Months – 1950 TK</button>
-      <button class="package-btn">📅 6 Months – 3600 TK</button>
-    </div>
-
-    <!-- Buttons -->
-    <button class="green-btn">🛒 Add to Cart</button>
-    <button class="green-btn back-btn" onclick="goBack()">🔙 Back to Home</button>
+  <h2>👤 Personal Profile</h2>
+  <div class="package-buttons">
+    <button>📅 1 Month – Only 240 TK</button>
+    <button>📅 2 Months – Only 480 TK</button>
+    <button>📅 3 Months – Only 720 TK</button>
+    <button>📅 6 Months – Only 1440 TK</button>
+    <button>📅 8 Months – Only 1800 TK</button>
+    <button>📅 12 Months – Only 2760 TK</button>
   </div>
 
-  <script>
-    function showPackagePage() {
-      document.getElementById("homePage").style.display = "none";
-      document.getElementById("packagePage").style.display = "block";
-      window.scrollTo({ top: 0, behavior: 'smooth' });
-    }
+  <h2>🔐 Primary Account</h2>
+  <div class="package-buttons">
+    <button>📅 1 Month – Only 650 TK</button>
+    <button>📅 2 Months – Only 1300 TK</button>
+    <button>📅 3 Months – Only 1950 TK</button>
+    <button>📅 6 Months – Only 3600 TK</button>
+  </div>
 
-    function goBack() {
-      document.getElementById("packagePage").style.display = "none";
-      document.getElementById("homePage").style.display = "block";
+  <div class="actions">
+    <button class="add">🛒 Add to Cart</button>
+    <button class="back" onclick="window.location.href='index.html'">🔙 Back to Home</button>
+  </div>
+
+  <div class="text-note">
+    শেয়ার অ্যাকাউন্টে একটি প্রোফাইল ২-৪ জন ইউজ করে থাকে। পার্সোনাল প্রোফাইলে আপনাকে পুরোপুরি আলাদা একটি প্রোফাইল দেওয়া হবে যেখানে কেউ প্রবেশ করতে পারবে না। আর প্রাইমারি একাউন্ট মানে পুরো একাউন্টটি একমাত্র আপনার জন্য থাকবে ⚠️।
+  </div>
+</div>
+
+  </div>  <script>
+    function scrollToPackages() {
+      document.getElementById("packages").scrollIntoView({ behavior: 'smooth' });
     }
-  </script>
-</body>
+  </script></body>
 </html>
