--- a/Index.html
+++ b/Index.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
-<html lang="bn">
+<!DOCTYPE html><html lang="bn">
 <head>
   <meta charset="UTF-8">
-  <title>MEGA PACKAGES</title>
+  <title>Crunchyroll Premium BD Shop</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
@@ -10,114 +9,78 @@
       font-family: 'Segoe UI', sans-serif;
       background-color: #131c2b;
       color: white;
-      padding-bottom: 50px;
     }
-
-    .banner {
-      width: 100%;
-      max-height: 400px;
-      object-fit: cover;
+    .main-page, .packages-page {
+      display: none;
+    }
+    .active {
       display: block;
     }
-
+    .banner {
+      width: 100%;
+      object-fit: cover;
+    }
     .avatar {
       width: 100px;
       height: 100px;
       border-radius: 50%;
-      object-fit: cover;
       display: block;
-      margin: 20px auto 10px;
+      margin: 20px auto;
       border: 3px solid white;
     }
-
-    h2 {
-      text-align: center;
-      color: #ffcc00;
-      margin-bottom: 10px;
-    }
-
     .section {
       max-width: 600px;
       margin: 20px auto;
       background: #1c2a3a;
       padding: 20px;
       border-radius: 10px;
+      text-align: center;
     }
-
-    .package-group {
-      margin-bottom: 30px;
-    }
-
     .package-group h3 {
-      margin-bottom: 10px;
       color: #00ffd5;
-      border-bottom: 1px solid #555;
-      padding-bottom: 5px;
+      margin-top: 20px;
     }
-
     .package-group button {
       display: block;
       width: 100%;
-      background-color: #0f7dc8;
-      color: white;
       padding: 12px;
-      margin: 8px 0;
+      margin: 6px 0;
+      background: #0f7dc8;
       border: none;
       border-radius: 8px;
+      color: white;
       font-size: 16px;
-      cursor: pointer;
     }
-
     .package-group button:hover {
-      background-color: #095e9f;
+      background: #095e9f;
     }
-
-    .action-buttons {
-      text-align: center;
-      margin-top: 30px;
-    }
-
     .action-buttons button {
-      padding: 12px 20px;
+      margin: 10px;
+      padding: 10px 20px;
       font-size: 16px;
       border: none;
-      border-radius: 8px;
-      margin: 10px;
+      border-radius: 6px;
       cursor: pointer;
     }
-
-    .add-to-cart {
-      background-color: orange;
-      color: black;
-    }
-
-    .back-home {
-      background-color: green;
-      color: white;
-    }
-
+    .add-to-cart { background: orange; color: black; }
+    .back-home { background: green; color: white; }
     .info-text {
-      text-align: center;
       margin-top: 20px;
-      color: white;
       font-size: 14px;
-      padding: 0 20px;
+      color: white;
     }
-
   </style>
 </head>
-<body>
-
-  <!-- Banner Image -->
-  <img class="banner" src="https://i.postimg.cc/KvBrVgmR/20250625-061716.jpg" alt="Main Banner">
-
-  <!-- Circular Avatar Image -->
-  <img class="avatar" src="https://i.postimg.cc/PxJQF3qj/89fcdebedfdcf2bf3a00a49d75833c3a-1.jpg" alt="Small Icon">
-
-  <!-- Section Starts -->
+<body><!-- Main Page --><div id="mainPage" class="main-page active">
   <div class="section">
-    <h2>💥 MEGA PACKAGES</h2>
-
+    <img src="https://i.postimg.cc/KvBrVgmR/20250625-061716.jpg" class="banner" alt="Main Banner">
+    <img src="https://i.postimg.cc/PxJQF3qj/89fcdebedfdcf2bf3a00a49d75833c3a-1.jpg" class="avatar" alt="Profile">
+    <h2>Welcome to Crunchyroll Premium BD Shop</h2>
+    <button onclick="showPackages()" style="background: green; color: white; font-size: 18px; padding: 12px 20px; border-radius: 8px;">💥 MEGA PACKAGES</button>
+  </div>
+</div><!-- Packages Page --><div id="packagesPage" class="packages-page">
+  <div class="section">
+    <h2>📦 MEGA PACKAGES</h2>
     <div class="package-group">
       <h3>📤 Shared Profile</h3>
       <button>1 Month – 100 TK</button>
@@ -126,7 +89,6 @@
       <button>6 Months – 600 TK</button>
       <button>8 Months – 840 TK</button>
     </div>
-
     <div class="package-group">
       <h3>👤 Personal Profile</h3>
       <button>1 Month – 240 TK</button>
@@ -136,28 +98,33 @@
       <button>8 Months – 1800 TK</button>
       <button>12 Months – 2760 TK</button>
     </div>
-
     <div class="package-group">
       <h3>👑 Primary Account</h3>
       <button>1 Month – 650 TK</button>
       <button>2 Months – 1300 TK</button>
       <button>3 Months – 1950 TK</button>
       <button>6 Months – 3600 TK</button>
-    </div>
+    </div><div class="action-buttons">
+  <button class="add-to-cart">🛒 Add To Cart</button>
+  <button class="back-home" onclick="goBackHome()">🏠 Back To Home</button>
+</div>
 
-    <!-- Action Buttons -->
-    <div class="action-buttons">
-      <button class="add-to-cart">🛒 Add To Cart</button>
-      <button class="back-home">🏠 Back To Home</button>
-    </div>
+<div class="info-text">
+  শেয়ার অ্যাকাউন্টে একটা প্রোফাইল ২-৪ জন ইউজ করে।<br>
+  পার্সোনাল প্রোফাইল আপনাকে ফুল একটা প্রোফাইল দেওয়া হবে যেখানে কেউ প্রবেশ করবে না আপনি ছাড়া।<br>
+  আর প্রাইমারি একাউন্ট আপনাকে ফুল একাউন্ট দেওয়া হবে, শুধুমাত্র আপনার ⚠️
+</div>
 
-    <!-- Info Text -->
-    <div class="info-text">
-      শেয়ার অ্যাকাউন্টে একটা প্রোফাইল ২-৪ জন ইউজ করে। <br>
-      পার্সোনাল প্রোফাইল আপনাকে ফুল একটা প্রোফাইল দেওয়া হবে যেখানে কেউ প্রবেশ করবে না আপনি ছাড়া।<br>
-      আর প্রাইমারি একাউন্ট আপনাকে ফুল একাউন্ট দেওয়া হবে, শুধুমাত্র আপনার ⚠️
-    </div>
   </div>
+</div><script>
+  function showPackages() {
+    document.getElementById('mainPage').classList.remove('active');
+    document.getElementById('packagesPage').classList.add('active');
+  }
 
-</body>
+  function goBackHome() {
+    document.getElementById('packagesPage').classList.remove('active');
+    document.getElementById('mainPage').classList.add('active');
+  }
+</script></body>
 </html>
