--- a/Index.html
+++ b/Index.html
@@ -4,74 +4,24 @@
   <title>Crunchyroll Premium BD Shop</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #131c2b;
-      color: white;
-    }
-    .main-page, .packages-page {
-      display: none;
-    }
-    .active {
-      display: block;
-    }
-    .banner {
-      width: 100%;
-      object-fit: cover;
-    }
-    .avatar {
-      width: 100px;
-      height: 100px;
-      border-radius: 50%;
-      display: block;
-      margin: 20px auto;
-      border: 3px solid white;
-    }
-    .section {
-      max-width: 600px;
-      margin: 20px auto;
-      background: #1c2a3a;
-      padding: 20px;
-      border-radius: 10px;
-      text-align: center;
-    }
-    .package-group h3 {
-      color: #00ffd5;
-      margin-top: 20px;
-    }
-    .package-group button {
-      display: block;
-      width: 100%;
-      padding: 12px;
-      margin: 6px 0;
-      background: #0f7dc8;
-      border: none;
-      border-radius: 8px;
-      color: white;
-      font-size: 16px;
-    }
-    .package-group button:hover {
-      background: #095e9f;
-    }
-    .action-buttons button {
-      margin: 10px;
-      padding: 10px 20px;
-      font-size: 16px;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-    }
+    body { margin: 0; font-family: 'Segoe UI', sans-serif; background-color: #131c2b; color: white; }
+    .main-page, .packages-page, .checkout-page { display: none; }
+    .active { display: block; }
+    .banner { width: 100%; object-fit: cover; }
+    .avatar { width: 100px; height: 100px; border-radius: 50%; display: block; margin: 20px auto; border: 3px solid white; }
+    .section { max-width: 600px; margin: 20px auto; background: #1c2a3a; padding: 20px; border-radius: 10px; text-align: center; }
+    .package-group h3 { color: #00ffd5; margin-top: 20px; }
+    .package-group button { display: block; width: 100%; padding: 12px; margin: 6px 0; background: #0f7dc8; border: none; border-radius: 8px; color: white; font-size: 16px; cursor: pointer; }
+    .package-group button:hover { background: #095e9f; }
+    .action-buttons button { margin: 10px; padding: 10px 20px; font-size: 16px; border: none; border-radius: 6px; cursor: pointer; }
     .add-to-cart { background: orange; color: black; }
     .back-home { background: green; color: white; }
-    .info-text {
-      margin-top: 20px;
-      font-size: 14px;
-      color: white;
-    }
+    .info-text { margin-top: 20px; font-size: 14px; color: white; }
   </style>
 </head>
-<body><!-- Main Page --><div id="mainPage" class="main-page active">
+<body>
+<!-- Main Page -->
+<div id="mainPage" class="main-page active">
   <div class="section">
     <img src="https://i.postimg.cc/KvBrVgmR/20250625-061716.jpg" class="banner" alt="Main Banner">
     <img src="https://i.postimg.cc/PxJQF3qj/89fcdebedfdcf2bf3a00a49d75833c3a-1.jpg" class="avatar" alt="Profile">
@@ -83,38 +33,48 @@
     <h2>📦 MEGA PACKAGES</h2>
     <div class="package-group">
       <h3>📤 Shared Profile</h3>
-      <button>1 Month – 100 TK</button>
-      <button>2 Months – 200 TK</button>
-      <button>3 Months – 300 TK</button>
-      <button>6 Months – 600 TK</button>
-      <button>8 Months – 840 TK</button>
+      <button onclick="selectPackage('Shared Profile - 1 Month', 100)">1 Month – 100 TK</button>
+      <button onclick="selectPackage('Shared Profile - 2 Months', 200)">2 Months – 200 TK</button>
+      <button onclick="selectPackage('Shared Profile - 3 Months', 300)">3 Months – 300 TK</button>
+      <button onclick="selectPackage('Shared Profile - 6 Months', 600)">6 Months – 600 TK</button>
+      <button onclick="selectPackage('Shared Profile - 8 Months', 840)">8 Months – 840 TK</button>
     </div>
     <div class="package-group">
       <h3>👤 Personal Profile</h3>
-      <button>1 Month – 240 TK</button>
-      <button>2 Months – 480 TK</button>
-      <button>3 Months – 720 TK</button>
-      <button>6 Months – 1440 TK</button>
-      <button>8 Months – 1800 TK</button>
-      <button>12 Months – 2760 TK</button>
+      <button onclick="selectPackage('Personal Profile - 1 Month', 240)">1 Month – 240 TK</button>
+      <button onclick="selectPackage('Personal Profile - 2 Months', 480)">2 Months – 480 TK</button>
+      <button onclick="selectPackage('Personal Profile - 3 Months', 720)">3 Months – 720 TK</button>
+      <button onclick="selectPackage('Personal Profile - 6 Months', 1440)">6 Months – 1440 TK</button>
+      <button onclick="selectPackage('Personal Profile - 8 Months', 1800)">8 Months – 1800 TK</button>
+      <button onclick="selectPackage('Personal Profile - 12 Months', 2760)">12 Months – 2760 TK</button>
     </div>
     <div class="package-group">
       <h3>👑 Primary Account</h3>
-      <button>1 Month – 650 TK</button>
-      <button>2 Months – 1300 TK</button>
-      <button>3 Months – 1950 TK</button>
-      <button>6 Months – 3600 TK</button>
-    </div><div class="action-buttons">
-  <button class="add-to-cart">🛒 Add To Cart</button>
-  <button class="back-home" onclick="goBackHome()">🏠 Back To Home</button>
-</div>
-
-<div class="info-text">
-  শেয়ার অ্যাকাউন্টে একটা প্রোফাইল ২-৪ জন ইউজ করে।<br>
-  পার্সোনাল প্রোফাইল আপনাকে ফুল একটা প্রোফাইল দেওয়া হবে যেখানে কেউ প্রবেশ করবে না আপনি ছাড়া।<br>
-  আর প্রাইমারি একাউন্ট আপনাকে ফুল একাউন্ট দেওয়া হবে, শুধুমাত্র আপনার ⚠️
-</div>
-
+      <button onclick="selectPackage('Primary Account - 1 Month', 650)">1 Month – 650 TK</button>
+      <button onclick="selectPackage('Primary Account - 2 Months', 1300)">2 Months – 1300 TK</button>
+      <button onclick="selectPackage('Primary Account - 3 Months', 1950)">3 Months – 1950 TK</button>
+      <button onclick="selectPackage('Primary Account - 6 Months', 3600)">6 Months – 3600 TK</button>
+    </div>
+    <div class="action-buttons">
+      <button class="back-home" onclick="goBackHome()">🏠 Back To Home</button>
+    </div>
+    <div class="info-text">
+      শেয়ার এয়াকাউন্টে একটা প্রোফাইল 2-4 জন ইউজ করে।<br>
+      পার্সোনাল প্রোফাইল আপনাকে ফুল একটা প্রোফাইল দেওয়া হবে যেখানে কেউ প্রবেশ করবে না আপনি ছাড়ার আর প্রাইমারি একাউন্ট আপনাকে ফুল একাউন্ট দেওয়া হবে, শুধুমাত্র আপনার ⚠️
+    </div>
+  </div>
+</div><!-- Checkout Page --><div id="checkoutPage" class="checkout-page">
+  <div class="section">
+    <h2>🛎️ Order Confirmation</h2>
+    <p id="selectedPackage"></p>
+    <p id="selectedPrice"></p>
+    <h3>💼 Payment Instructions</h3>
+    <p>
+      Bkash/Nagad/Rocket: 01XXXXXXXXX<br>
+      Reference: Your Name<br>
+      After payment, please send screenshot to our WhatsApp.
+    </p>
+    <button onclick="goBackHome()">🏠 Back To Home</button>
   </div>
 </div><script>
   function showPackages() {
@@ -124,7 +84,15 @@
 
   function goBackHome() {
     document.getElementById('packagesPage').classList.remove('active');
+    document.getElementById('checkoutPage').classList.remove('active');
     document.getElementById('mainPage').classList.add('active');
+  }
+
+  function selectPackage(name, price) {
+    document.getElementById('packagesPage').classList.remove('active');
+    document.getElementById('checkoutPage').classList.add('active');
+    document.getElementById('selectedPackage').innerText = `Selected Package: ${name}`;
+    document.getElementById('selectedPrice').innerText = `Total Price: ৳${price}`;
   }
 </script></body>
 </html>
